# Lubimovka_backend

./: .dockerignore  .env_example  .env_local  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_dev  Dockerfile_prod  README.md  check_env_script.sh  client_secrets.json  cspell.json  develop_deploy.yaml  dump.rdb  env_script.sh  gunicorn.conf.py  manage.py  nginx.conf  output.txt  perms.json  postgres-local.yaml  production.yaml  pyproject.toml  pytest.ini  setup.cfg  swag-nginx.conf  swag_nginx.conf  swag_nginx_test.conf  test_branch_deploy.yaml
.envs_examples/: .django  .postgres  .swag
.github/: pull_request_template.md
.github/workflows/: backend_deploy.yaml  backend_deploy_develop.yaml  backend_deploy_prod.yaml  backend_deploy_stage.yaml  backend_deploy_test.yaml  check_vulnerabilities.yaml  codestyle_pep8.yaml  codestyle_pep8_and_tests.yaml  coverage_and_tests.yaml  deploy_branch_testing.yaml  makemigrations_test.yaml  pytests.yaml  run_tests.yaml  telegram.yaml
.github/workflows/deploy/: backend_deploy.yaml
apps/afisha/: admin.py  apps.py  factories.py  filters.py  forms.py  mixins.py  models.py  pagination.py  selectors.py  serializers.py  urls.py  views.py
apps/afisha/admin/: __init__.py  events.py  master_class.py  masterclass.py  performance.py  performance_media_review.py  performance_review.py  performancemediareview.py  reading.py
apps/afisha/factories/: __init__.py  events.py  master_class.py  masterclass.py  performance.py  reading.py
apps/afisha/migrations/: 0001.py  0001_initial.py  0002.py  0002_event_date.py  (+71 more)
apps/articles/: admin.py  apps.py  filters.py  mixins.py  models.py  selectors.py  serializers.py  services.py  urls.py  utilities.py  utils.py  views.py
apps/content_pages/: admin.py  apps.py  fields.py  filters.py  mixins.py  models.py  querysets.py  serializers.py  services.py  urls.py  utilities.py  validators.py  views.py  widgets.py
apps/core/: admin.py  apps.py  constants.py  context_processors.py  css_generator.py  factories.py  fields.py  mixins.py  models.py  serializers.py  status_source.py  urls.py  utilities.py  utils.py  validators.py  views.py  widgets.py
apps/feedback/: admin.py  apps.py  filters.py  urls.py  utils.py
apps/filer/: admin.py  apps.py  utils.py
apps/history/: admin.py  apps.py  models.py  urls.py  views.py
apps/info/: admin.py  admin_apps.py  apps.py  context_processors.py  factories.py  filters.py  form.py  models.py  selectors.py  serializers.py  urls.py  utils.py  views.py
apps/main/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  utilities.py  utils.py  views.py
apps/postfix/: admin.py  apps.py  models.py  validators.py
apps/static_pages/: admin.py  apps.py  models.py  serializers.py  views.py
apps/users/: admin.py  apps.py  factories.py  forms.py  mixins.py  models.py  urls.py  utils.py
config/: asgi.py  asgi_dev.py  asgi_prod.py  logging.py  urls.py  wsgi_dev.py  wsgi_prod.py
config/logging/: logger_handler.py  logging_settings.py
config/settings/: base.py  dev.py  local.py  prod.py  test.py
docs/: admin_image_preview.md  codestyle.md  pull_request.md
docs/ansible/: README.MD  inventory.yaml  playbook.yaml
docs/postfix/: docker-compose.yaml  filter.sh  pgsql-virtual.cf
fixtures/: fixtures.json
infra_deploy/: .env_example  application_develop_deploy.yml  backend_develop_deploy.yaml  backend_prod_deploy.yaml  backend_test_deploy.yaml  check_env_script.sh  db_backup_cron.sh  develop_deploy.yaml  docker_check.sh  docker_check_run.sh  front_deploy.yaml  frontend_deploy.yaml  frontend_prod_deploy.yaml  lubimovka.service  swag.yaml  swag_deploy.yaml  swag_nginx.conf  swag_prod_deploy.yaml  test_branch_deploy.yaml  yadisk_upload.py
infra_deploy/develop/: application_develop_deploy.yml  lubimovka-backend.service  lubimovka-frontend.service  lubimovka.service  lubimovka_backend_develop_deploy.yml  lubimovka_frontend_develop_deploy.yml  lubimovka_swag_develop_deploy.yml
infra_deploy/nginx_proxy/: docker-compose.yaml  docker-compose.yml  nginx.conf
infra_deploy/postfix/: Dockerfile  filter.sh  init.sh  pgsql-virtual.cf  postfix-prod.yaml  postfix-stage.yaml  postfix-test.yaml  readme.md
infra_deploy/prod/: lubimovka-backend.service  lubimovka-frontend.service  lubimovka_backend_prod_deploy.yml  lubimovka_frontend_prod_deploy.yml  lubimovka_swag_prod_deploy.yml
infra_deploy/stage/: lubimovka-backend.service  lubimovka-frontend.service  lubimovka_backend_stage_deploy.yml  lubimovka_frontend_stage_deploy.yml
infra_deploy/swag/: swag_nginx.conf  swag_nginx_develop.conf  swag_nginx_prod.conf
infra_deploy/test/: lubimovka-backend-test.service  lubimovka-backend.service  lubimovka-frontend-test.service  lubimovka-frontend.service  lubimovka_backend_test_deploy.yml  lubimovka_frontend_test_deploy.yml
requirements/: dev.txt  prod.txt
templates/: email.html
templates/admin/: base.html  base_site.html  change_form.html  index.html  search_form.html
templates/registration/: invitation_email.html  invitation_subject.txt
(+664 files in other folders)
