[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
    | venv
    | _build
    | buck-out
    | build
    | migrations
    | config/settings
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.poetry]
name = "lubimovka_backend"
version = "0.1.0"
description = "Lubimovka + Ya.Practicum backend"
authors = ["Ya.Practicum Students"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.23"
django-environ = "^0.8.1"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "2.9.7"
gunicorn = "^20.1.0"
drf-spectacular = "^0.22.0"
django-filter = "^21.1"
Pillow = "^10.0.1"
django-admin-sortable2 = "^1.0.2"
django-debug-toolbar = "^4.2.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^5.2.0"}
factory-boy = "^3.2.0"
django-rest-multiple-models = "^2.1.3"
django-ckeditor = "^6.1.0"
pytest-lazy-fixture = "^0.6.3"
django-anymail = {extras = ["mailjet"], version = "^8.4"}
flake8-docstrings = "^1.6.0"
xhtml2pdf = "^0.2.5"
google-api-python-client = "^2.36.0"
GitPython = "^3.1.40"
reportlab = "3.6.13"
yadisk = "^1.2.15"
django-filer = "^3.1.0"
certifi = "^2023.7.22"
urllib3 = "^2.0.7"
requests = "^2.31.0"
cryptography = "^41.0.4"
sqlparse = "^0.4.4"
easy-thumbnails = "^2.8.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipython = "^8.10.0"
pytest-django = "^4.5.2"
coverage = "^5.5"
Werkzeug = "^2.0.1"
django-extensions = "^3.1.3"
django-debug-toolbar = "^4.2.0"
pytest-freezegun = "^0.4.2"
pytest-sugar = "^0.9.4"
pytest-deadfixtures = "^2.2.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
